--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quirky-easy-fun",
+  "name": "nsc-beschreibung",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
